fix: markdown pre overflow

--- a/static/css/parts/AdditionalDetails.css
+++ b/static/css/parts/AdditionalDetails.css
@@ -29,21 +29,6 @@
   outline-width: 1px;
 }
 
-.AdditionalDetails {
-  contain: strict;
-  flex: 1;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-.AdditionalDetails:focus {
-  outline-color: var(--FocusBorder);
-  outline-offset: -1px;
-  outline-style: solid;
-  outline-width: 1px;
-}
-
 .AdditionalDetailsTitle {
   font-size: 120%;
   padding-bottom: 15px;
